# QNMH-algorithm

./: .gitignore  README.md  content_master.md  environment.yml  plan.md  pyproject.toml  sample_human_network.edgelist  sample_mouse_network.edgelist
.roo/: activeContext.md  decisionLog.md  productContext.md  progress.md  projectContext.md  systemPatterns.md  techContext.md
scripts/: .clinerules  AGENTS.md  README.md  init_roo.py
scripts/.roo/: activeContext.md  archive.md  decisionLog.md  productContext.md  progress.md  projectContext.md  systemPatterns.md  techContext.md
scripts/.roo/rules/: coding-standards.md  security.md
scripts/.roo/rules-architect/: planning.md
src/: main.py
src/api/: endpoints.py
src/core/models/: api_models.py
src/core/pri/: calculator.py
src/core/qnmh/: nx_impl.py  solver.py
src/infrastructure/compute/: manager.py  tasks.py
src/static/: index.html
src/tests/: test_api.py  test_core.py
